--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,10 @@ body {
   font-family: "Karla", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 20px;
+  font-size: 16px;
   margin-top: 4rem;
+  display: flex;
+  justify-content: center;
 }
 
 code {
